--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint": "5.8.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-plugin-import": "2.14.0",
-    "nodemon": "1.18.5"
+    "nodemon": "^1.18.9"
   },
   "nodemonConfig": {
     "ignore": [
